--- a/Resources/Resources/Styles/WPFToolkit/ButtonSpinner.xaml
+++ b/Resources/Resources/Styles/WPFToolkit/ButtonSpinner.xaml
@@ -21,7 +21,7 @@
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	xmlns:controls="clr-namespace:Microsoft.Windows.Controls;assembly=WPFToolkit"
-	xmlns:local="clr-namespace:Xceed.Wpf.Toolkit;assembly=WPFToolkit.Extended">
+	xmlns:local="clr-namespace:Xceed.Wpf.Toolkit;assembly=Xceed.Wpf.Toolkit">
 
 	<Style TargetType="controls:ButtonSpinner">
 		<Setter Property="HorizontalContentAlignment" Value="Center" />
