--- a/Resources/Resources/Styles/WPFToolkit/DateTimePicker.xaml
+++ b/Resources/Resources/Styles/WPFToolkit/DateTimePicker.xaml
@@ -18,39 +18,39 @@
   ********************************************************************-->
 <ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
-                    xmlns:local="clr-namespace:Xceed.Wpf.Toolkit;assembly=WPFToolkit.Extended"
-                    xmlns:chrome="clr-namespace:Xceed.Wpf.Toolkit.Chromes;assembly=WPFToolkit.Extended"
-                    xmlns:conv="clr-namespace:Xceed.Wpf.Toolkit.Core.Converters;assembly=WPFToolkit.Extended">
+                    xmlns:local="clr-namespace:Xceed.Wpf.Toolkit;assembly=Xceed.Wpf.Toolkit"
+                    xmlns:chrome="clr-namespace:Xceed.Wpf.Toolkit.Chromes;assembly=Xceed.Wpf.Toolkit"
+                    xmlns:conv="clr-namespace:Xceed.Wpf.Toolkit.Core.Converters;assembly=Xceed.Wpf.Toolkit">
 
-	<conv:InverseBoolConverter x:Key="InverseBoolConverter" />
+    <conv:InverseBoolConverter x:Key="InverseBoolConverter" />
 
-	<DataTemplate x:Key="DefaultWatermarkTemplate">
-		<ContentControl Content="{Binding}" Foreground="Gray" Focusable="False" />
-	</DataTemplate>
+    <DataTemplate x:Key="DefaultWatermarkTemplate">
+        <ContentControl Content="{Binding}" Foreground="Gray" Focusable="False" />
+    </DataTemplate>
 
-	<LinearGradientBrush x:Key="PopupDarkBorderBrush" EndPoint="0.5,1" StartPoint="0.5,0">
-		<GradientStop Color="#FFA3AEB9" Offset="0" />
-		<GradientStop Color="#FF8399A9" Offset="0.375" />
-		<GradientStop Color="#FF718597" Offset="0.375" />
-		<GradientStop Color="#FF617584" Offset="1" />
-	</LinearGradientBrush>
+    <LinearGradientBrush x:Key="PopupDarkBorderBrush" EndPoint="0.5,1" StartPoint="0.5,0">
+        <GradientStop Color="#FFA3AEB9" Offset="0" />
+        <GradientStop Color="#FF8399A9" Offset="0.375" />
+        <GradientStop Color="#FF718597" Offset="0.375" />
+        <GradientStop Color="#FF617584" Offset="1" />
+    </LinearGradientBrush>
 
-	<LinearGradientBrush x:Key="PopupBackgroundBrush" StartPoint="0,0" EndPoint="0,1">
-		<LinearGradientBrush.GradientStops>
-			<GradientStopCollection>
-				<GradientStop Offset="0" Color="#FFffffff" />
-				<GradientStop Offset="1" Color="#FFE8EBED" />
-			</GradientStopCollection>
-		</LinearGradientBrush.GradientStops>
-	</LinearGradientBrush>
+    <LinearGradientBrush x:Key="PopupBackgroundBrush" StartPoint="0,0" EndPoint="0,1">
+        <LinearGradientBrush.GradientStops>
+            <GradientStopCollection>
+                <GradientStop Offset="0" Color="#FFffffff" />
+                <GradientStop Offset="1" Color="#FFE8EBED" />
+            </GradientStopCollection>
+        </LinearGradientBrush.GradientStops>
+    </LinearGradientBrush>
 
-	<Style x:Key="DateTimePickerToggleButtonStyle" TargetType="ToggleButton">
-		<Setter Property="Focusable" Value="False"/>
-		<Setter Property="Template">
-			<Setter.Value>
-				<ControlTemplate TargetType="{x:Type ToggleButton}">
-					<Grid SnapsToDevicePixels="True" Width="17">
-						<Border
+    <Style x:Key="DateTimePickerToggleButtonStyle" TargetType="ToggleButton">
+        <Setter Property="Focusable" Value="False"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type ToggleButton}">
+                    <Grid SnapsToDevicePixels="True" Width="17">
+                        <Border
 							x:Name="OutherBorder"
 							Grid.ColumnSpan="2"
 							CornerRadius="0,4,4,0"
@@ -58,7 +58,7 @@
 							Background="{DynamicResource NormalBrush}"
 							BorderBrush="{DynamicResource OutherBorderBrush}"
 							BorderThickness="0,1,1,1"/>
-						<Border 
+                        <Border 
 							x:Name="ToggleButtonBorder"
 							Grid.Column="1"
 							CornerRadius="0,3,3,0" 
@@ -66,7 +66,7 @@
 							Background="Transparent" 
 							BorderBrush="{DynamicResource TextBoxBorderBrush}"
 							BorderThickness="0,1,1,1" />
-						<Path 
+                        <Path 
 							x:Name="Arrow"
 							Grid.Column="1"
 							Margin="1,2,2,2"
@@ -74,61 +74,61 @@
 							HorizontalAlignment="Center"
 							VerticalAlignment="Center"
 							Data="M 0 0 L 4 4 L 8 0 Z"/>
-					</Grid>
-					<ControlTemplate.Triggers>
-						<Trigger Property="IsMouseOver" Value="true">
-							<Setter TargetName="OutherBorder" Property="Background" Value="{DynamicResource HoverBrush}" />
-							<Setter TargetName="ToggleButtonBorder" Property="BorderBrush" Value="{DynamicResource HoverBorderBrush}" />
-						</Trigger>
-						<Trigger Property="IsChecked" Value="true">
-							<Setter TargetName="OutherBorder" Property="Background" Value="{DynamicResource PressedBackgroundBrush}" />
-							<Setter TargetName="ToggleButtonBorder" Property="BorderBrush" Value="{DynamicResource PressedBorderBrush}" />
-							<Setter TargetName="Arrow" Property="Fill" Value="White" />
-						</Trigger>
-						<Trigger Property="IsEnabled" Value="False">
-							<Setter TargetName="ToggleButtonBorder" Property="Opacity" Value="0.5" />
-							<Setter TargetName="Arrow" Property="Opacity" Value="0.5" />
-						</Trigger>
-					</ControlTemplate.Triggers>
-				</ControlTemplate>
-			</Setter.Value>
-		</Setter>
-	</Style>
+                    </Grid>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsMouseOver" Value="true">
+                            <Setter TargetName="OutherBorder" Property="Background" Value="{DynamicResource HoverBrush}" />
+                            <Setter TargetName="ToggleButtonBorder" Property="BorderBrush" Value="{DynamicResource HoverBorderBrush}" />
+                        </Trigger>
+                        <Trigger Property="IsChecked" Value="true">
+                            <Setter TargetName="OutherBorder" Property="Background" Value="{DynamicResource PressedBackgroundBrush}" />
+                            <Setter TargetName="ToggleButtonBorder" Property="BorderBrush" Value="{DynamicResource PressedBorderBrush}" />
+                            <Setter TargetName="Arrow" Property="Fill" Value="White" />
+                        </Trigger>
+                        <Trigger Property="IsEnabled" Value="False">
+                            <Setter TargetName="ToggleButtonBorder" Property="Opacity" Value="0.5" />
+                            <Setter TargetName="Arrow" Property="Opacity" Value="0.5" />
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
 
-	<!-- =============================================================================== -->
-	<!-- DateTimePicker                                                                  -->
-	<!-- =============================================================================== -->
+    <!-- =============================================================================== -->
+    <!-- DateTimePicker                                                                  -->
+    <!-- =============================================================================== -->
 
-	<Style TargetType="{x:Type local:DateTimePicker}">
-		<Setter Property="Background" Value="White" />
-		<Setter Property="BorderThickness" Value="1" />
-		<Setter Property="Focusable" Value="False" />
-		<Setter Property="FontFamily" Value="{DynamicResource DefaultFont}"/>
-		<Setter Property="FontSize" Value="{DynamicResource NormalFontSize}"/>
-		<Setter Property="Foreground" Value="{DynamicResource TextBrush}" />
-		<Setter Property="HorizontalContentAlignment" Value="Right" />
-		<Setter Property="TextAlignment" Value="Right" />
+    <Style TargetType="{x:Type local:DateTimePicker}">
+        <Setter Property="Background" Value="White" />
+        <Setter Property="BorderThickness" Value="1" />
+        <Setter Property="Focusable" Value="False" />
+        <Setter Property="FontFamily" Value="{DynamicResource DefaultFont}"/>
+        <Setter Property="FontSize" Value="{DynamicResource NormalFontSize}"/>
+        <Setter Property="Foreground" Value="{DynamicResource TextBrush}" />
+        <Setter Property="HorizontalContentAlignment" Value="Right" />
+        <Setter Property="TextAlignment" Value="Right" />
         <Setter Property="Format" Value="Custom"/>
         <Setter Property="FormatString" Value="M/d/yyyy h:mm tt"/>
-		<Setter Property="TimeWatermarkTemplate" Value="{StaticResource DefaultWatermarkTemplate}" />
-		<Setter Property="WatermarkTemplate" Value="{StaticResource DefaultWatermarkTemplate}" />
-		<Setter Property="Validation.ErrorTemplate" Value="{DynamicResource DefaultErrorTemplate}"/>
-		<Setter Property="Template">
-			<Setter.Value>
-				<ControlTemplate TargetType="{x:Type local:DateTimePicker}">
-					<Grid>
-						<Grid>
-							<Grid.ColumnDefinitions>
-								<ColumnDefinition Width="*" />
-								<ColumnDefinition Width="Auto" />
-							</Grid.ColumnDefinitions>
-							<local:ButtonSpinner x:Name="Spinner"
+        <Setter Property="TimeWatermarkTemplate" Value="{StaticResource DefaultWatermarkTemplate}" />
+        <Setter Property="WatermarkTemplate" Value="{StaticResource DefaultWatermarkTemplate}" />
+        <Setter Property="Validation.ErrorTemplate" Value="{DynamicResource DefaultErrorTemplate}"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type local:DateTimePicker}">
+                    <Grid>
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*" />
+                                <ColumnDefinition Width="Auto" />
+                            </Grid.ColumnDefinitions>
+                            <local:ButtonSpinner x:Name="PART_Spinner"
                                              IsTabStop="False"
                                              Background="{TemplateBinding Background}"
                                              BorderThickness="{TemplateBinding BorderThickness}"
                                              AllowSpin="{TemplateBinding AllowSpin}"
                                              ShowButtonSpinner="{TemplateBinding ShowButtonSpinner}">
-								<local:WatermarkTextBox x:Name="TextBox"
+                                <local:WatermarkTextBox x:Name="PART_TextBox"
                                                    BorderThickness="1,1,0,1" 
                                                    FontFamily="{TemplateBinding FontFamily}" 
                                                    FontSize="{TemplateBinding FontSize}" 
@@ -148,34 +148,53 @@
                                                    Text="{Binding Text, RelativeSource={RelativeSource TemplatedParent}}"
                                                    Watermark="{TemplateBinding Watermark}"
                                                    WatermarkTemplate="{TemplateBinding WatermarkTemplate}" />
-							</local:ButtonSpinner>
-							<ToggleButton x:Name="_calendarToggleButton"
+                            </local:ButtonSpinner>
+                            <ToggleButton x:Name="_calendarToggleButton"
                                       Grid.Column="1"
                                       Margin="-1,0,0,0"
                                       IsChecked="{Binding IsOpen, RelativeSource={RelativeSource TemplatedParent}}"
                                       Style="{StaticResource DateTimePickerToggleButtonStyle}"
                                       IsHitTestVisible="{Binding IsOpen, RelativeSource={RelativeSource TemplatedParent}, Converter={StaticResource InverseBoolConverter}}"
                                       IsEnabled="{Binding IsReadOnly, RelativeSource={RelativeSource TemplatedParent}, Converter={StaticResource InverseBoolConverter}}" />
-						</Grid>
-						<Popup IsOpen="{Binding IsChecked, ElementName=_calendarToggleButton}" AllowsTransparency="True"
+                        </Grid>
+                        <Popup IsOpen="{Binding IsChecked, ElementName=_calendarToggleButton}" AllowsTransparency="True"
                                    StaysOpen="False" PopupAnimation="None" Placement="Bottom" HorizontalAlignment="Stretch">
-							<Border BorderThickness="1" CornerRadius="3" Background="{StaticResource PopupBackgroundBrush}" BorderBrush="{StaticResource PopupDarkBorderBrush}" Padding="3">
-								<StackPanel HorizontalAlignment="Right">
-									<Calendar x:Name="PART_Calendar" BorderThickness="0" />
-									<local:TimePicker x:Name="PART_TimeUpDown"
+                            <Border BorderThickness="1" CornerRadius="3" Background="{StaticResource PopupBackgroundBrush}" BorderBrush="{StaticResource PopupDarkBorderBrush}" Padding="3">
+                                <StackPanel HorizontalAlignment="Right">
+                                    <Calendar x:Name="PART_Calendar" BorderThickness="0" />
+                                    <local:TimePicker x:Name="PART_TimeUpDown"
                                                 Margin="0,4,0,0"
                                                 Format="{TemplateBinding TimeFormat}"
                                                 FormatString="{TemplateBinding TimeFormatString}"
+                                                Kind="{Binding Kind, RelativeSource={RelativeSource TemplatedParent}}"
                                                 Value="{Binding Value, RelativeSource={RelativeSource TemplatedParent}}"
+                                                Minimum="{Binding Minimum, RelativeSource={RelativeSource TemplatedParent}}"
+                                                Maximum="{Binding Maximum, RelativeSource={RelativeSource TemplatedParent}}"
+                                                ClipValueToMinMax="{Binding ClipValueToMinMax, RelativeSource={RelativeSource TemplatedParent}}"
+                                                AllowSpin="{TemplateBinding TimePickerAllowSpin}"
+                                                ShowButtonSpinner="{TemplateBinding TimePickerShowButtonSpinner}"
                                                 Watermark="{TemplateBinding TimeWatermark}"
-                                                WatermarkTemplate="{TemplateBinding TimeWatermarkTemplate}" />
-								</StackPanel>
-							</Border>
-						</Popup>
-					</Grid>
-				</ControlTemplate>
-			</Setter.Value>
-		</Setter>
-	</Style>
+                                                WatermarkTemplate="{TemplateBinding TimeWatermarkTemplate}"
+                                                Visibility="{TemplateBinding TimePickerVisibility}"/>
+                                </StackPanel>
+                            </Border>
+                        </Popup>
+                    </Grid>
+                    <ControlTemplate.Triggers>
+                        <MultiDataTrigger>
+                            <MultiDataTrigger.Conditions>
+                                <Condition Binding="{Binding IsReadOnly, RelativeSource={RelativeSource Self}}" Value="False" />
+                                <Condition Binding="{Binding AllowTextInput, RelativeSource={RelativeSource Self}}" Value="False" />
+                            </MultiDataTrigger.Conditions>
+                            <Setter Property="IsReadOnly" Value="True" TargetName="PART_TextBox" />
+                        </MultiDataTrigger>
+                        <DataTrigger Binding="{Binding IsReadOnly, RelativeSource={RelativeSource Self}}" Value="True">
+                            <Setter Property="IsReadOnly" Value="True" TargetName="PART_TextBox" />
+                        </DataTrigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
 
 </ResourceDictionary>
