--- a/Resources/Resources/Styles/WPFToolkit/DateTimeUpDown.xaml
+++ b/Resources/Resources/Styles/WPFToolkit/DateTimeUpDown.xaml
@@ -15,49 +15,50 @@
 
    Visit http://xceed.com and follow @datagrid on Twitter.
 
-  ********************************************************************-->	
-	
+  ********************************************************************-->
+
 <ResourceDictionary
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-	xmlns:local="clr-namespace:Xceed.Wpf.Toolkit;assembly=WPFToolkit.Extended">
+	xmlns:local="clr-namespace:Xceed.Wpf.Toolkit;assembly=Xceed.Wpf.Toolkit">
 
-	<!-- =============================================================================== -->
-	<!-- DateTimeUpDown                                                                  -->
-	<!-- =============================================================================== -->
+    <!-- =============================================================================== -->
+    <!-- DateTimeUpDown                                                                  -->
+    <!-- =============================================================================== -->
 
-	<DataTemplate x:Key="DefaultWatermarkTemplate">
-		<ContentControl Content="{Binding}" Foreground="Gray" Focusable="False" />
-	</DataTemplate>
+    <DataTemplate x:Key="DefaultWatermarkTemplate">
+        <ContentControl Content="{Binding}" Foreground="Gray" Focusable="False" />
+    </DataTemplate>
 
-	<Style TargetType="{x:Type local:DateTimeUpDown}">
-		<Setter Property="OverridesDefaultStyle" Value="True"/>
-		<Setter Property="SnapsToDevicePixels" Value="True"/>
-		<Setter Property="FontFamily" Value="{DynamicResource DefaultFont}"/>
-		<Setter Property="FontSize" Value="{DynamicResource NormalFontSize}"/>
-		<Setter Property="Background" Value="White" />
-		<Setter Property="BorderThickness" Value="1" />
-		<Setter Property="Focusable" Value="False" />
-		<Setter Property="Foreground" Value="Black" />
-		<Setter Property="HorizontalContentAlignment" Value="Right" />
-		<Setter Property="TextAlignment" Value="Right" />
-		<Setter Property="AllowDrop" Value="True"/>
+    <Style x:Key="DateTimeUpDown" TargetType="{x:Type local:DateTimeUpDown}">
+        <Setter Property="OverridesDefaultStyle" Value="True"/>
+        <Setter Property="SnapsToDevicePixels" Value="True"/>
+        <Setter Property="FontFamily" Value="{DynamicResource DefaultFont}"/>
+        <Setter Property="FontSize" Value="{DynamicResource NormalFontSize}"/>
+        <Setter Property="Background" Value="White" />
+        <Setter Property="BorderThickness" Value="1" />
+        <Setter Property="Focusable" Value="False" />
+        <Setter Property="Foreground" Value="Black" />
+        <Setter Property="HorizontalContentAlignment" Value="Right" />
+        <Setter Property="TextAlignment" Value="Right" />
+        <Setter Property="AllowDrop" Value="True"/>
         <Setter Property="Height" Value="24" />
         <Setter Property="Format" Value="Custom"/>
-        <Setter Property="FormatString" Value="M/d/yyyy h:mm tt"/>
-		<Setter Property="WatermarkTemplate" Value="{StaticResource DefaultWatermarkTemplate}" />
-		<Setter Property="Validation.ErrorTemplate" Value="{DynamicResource DefaultErrorTemplate}"/>
-		<Setter Property="Template">
-			<Setter.Value>
-				<ControlTemplate TargetType="{x:Type local:DateTimeUpDown}">
-					<local:ButtonSpinner x:Name="Spinner"
+        <Setter Property="FormatString" Value="g"/>
+        <Setter Property="WatermarkTemplate" Value="{StaticResource DefaultWatermarkTemplate}" />
+        <Setter Property="Validation.ErrorTemplate" Value="{DynamicResource DefaultErrorTemplate}"/>
+        <Setter Property="IsTabStop" Value="False" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type local:DateTimeUpDown}">
+                    <local:ButtonSpinner x:Name="PART_Spinner"
 										IsTabStop="False"
                                         Height="{TemplateBinding Height}"
 										Background="{TemplateBinding Background}"
 										BorderThickness="{TemplateBinding BorderThickness}"
 										AllowSpin="{TemplateBinding AllowSpin}"
 										ShowButtonSpinner="{TemplateBinding ShowButtonSpinner}">
-						<local:WatermarkTextBox x:Name="TextBox"
+                        <local:WatermarkTextBox x:Name="PART_TextBox"
 											BorderThickness="1,1,0,1"
 											ContextMenu="{TemplateBinding ContextMenu}"
 											FontFamily="{TemplateBinding FontFamily}" 
@@ -79,15 +80,30 @@
 											Watermark="{TemplateBinding Watermark}"
 											WatermarkTemplate="{TemplateBinding WatermarkTemplate}"
 											AllowDrop="{TemplateBinding AllowDrop}"/>
-					</local:ButtonSpinner>
-					<ControlTemplate.Triggers>
-						<Trigger Property="IsEnabled" Value="False">
-							<Setter Property="Foreground" Value="{StaticResource DisabledForegroundBrush}"/>
-						</Trigger>
-					</ControlTemplate.Triggers>
-				</ControlTemplate>
-			</Setter.Value>
-		</Setter>
-	</Style>
+                    </local:ButtonSpinner>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsFocused" Value="True">
+                            <Setter TargetName="PART_TextBox" Property="FocusManager.FocusedElement" Value="{Binding ElementName=PART_TextBox}" />
+                        </Trigger>
+                        <MultiDataTrigger>
+                            <MultiDataTrigger.Conditions>
+                                <Condition Binding="{Binding IsReadOnly, RelativeSource={RelativeSource Self}}" Value="False" />
+                                <Condition Binding="{Binding AllowTextInput, RelativeSource={RelativeSource Self}}" Value="False" />
+                            </MultiDataTrigger.Conditions>
+                            <Setter Property="IsReadOnly" Value="True" TargetName="PART_TextBox" />
+                        </MultiDataTrigger>
+                        <DataTrigger Binding="{Binding IsReadOnly, RelativeSource={RelativeSource Self}}" Value="True">
+                            <Setter Property="IsReadOnly" Value="True" TargetName="PART_TextBox" />
+                        </DataTrigger>
+                        <Trigger Property="IsEnabled" Value="False">
+                            <Setter Property="Foreground" Value="{StaticResource DisabledForegroundBrush}"/>
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <Style TargetType="{x:Type local:DateTimeUpDown}" BasedOn="{StaticResource DateTimeUpDown}" />
 
 </ResourceDictionary>
