--- a/Resources/Resources/Styles/WPFToolkit/NumericUpDown.xaml
+++ b/Resources/Resources/Styles/WPFToolkit/NumericUpDown.xaml
@@ -21,22 +21,24 @@
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	xmlns:controls="clr-namespace:Microsoft.Windows.Controls;assembly=WPFToolkit"
-	xmlns:local="clr-namespace:Xceed.Wpf.Toolkit;assembly=WPFToolkit.Extended"
-	xmlns:conv="clr-namespace:Xceed.Wpf.Toolkit.Core.Converters;assembly=WPFToolkit.Extended">
+	xmlns:local="clr-namespace:Xceed.Wpf.Toolkit;assembly=Xceed.Wpf.Toolkit"
+    xmlns:themes="clr-namespace:Xceed.Wpf.Toolkit.Themes;assembly=Xceed.Wpf.Toolkit"
+    xmlns:prim="clr-namespace:Xceed.Wpf.Toolkit.Primitives;assembly=Xceed.Wpf.Toolkit"
+	xmlns:conv="clr-namespace:Xceed.Wpf.Toolkit.Core.Converters;assembly=Xceed.Wpf.Toolkit">
 
-	<Style TargetType="controls:NumericUpDown">
-		<Setter Property="FontFamily" Value="{DynamicResource DefaultFont}"/>
-		<Setter Property="FontSize" Value="{DynamicResource NormalFontSize}"/>
-		<Setter Property="BorderThickness" Value="1" />
-		<Setter Property="Height" Value="22" />
-		<Setter Property="Validation.ErrorTemplate" Value="{DynamicResource DefaultErrorTemplate}"/>
-		<Setter Property="AllowDrop" Value="True"/>
-		<Setter Property="Template">
-			<Setter.Value>
-				<ControlTemplate TargetType="controls:NumericUpDown">
-					<Grid Name="Grid">
-						<controls:ButtonSpinner x:Name="Spinner" MinWidth="35" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch">
-							<TextBox x:Name="Text" 
+    <Style TargetType="controls:NumericUpDown">
+        <Setter Property="FontFamily" Value="{DynamicResource DefaultFont}"/>
+        <Setter Property="FontSize" Value="{DynamicResource NormalFontSize}"/>
+        <Setter Property="BorderThickness" Value="1" />
+        <Setter Property="Height" Value="22" />
+        <Setter Property="Validation.ErrorTemplate" Value="{DynamicResource DefaultErrorTemplate}"/>
+        <Setter Property="AllowDrop" Value="True"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="controls:NumericUpDown">
+                    <Grid Name="Grid">
+                        <controls:ButtonSpinner x:Name="Spinner" MinWidth="35" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch">
+                            <TextBox x:Name="Text" 
 									 Padding="0,0,2,0" 
 									 Margin="0,0,-3,0"
 									 VerticalContentAlignment="Center"
@@ -54,44 +56,49 @@
 									 TextAlignment="Right" 
 									 TextWrapping="NoWrap"
 									 AllowDrop="{TemplateBinding AllowDrop}"/>
-						</controls:ButtonSpinner>
-					</Grid>
-				</ControlTemplate>
-			</Setter.Value>
-		</Setter>
-	</Style>
+                        </controls:ButtonSpinner>
+                    </Grid>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
 
 
 
-	<!-- =============================================================================== -->
-	<!-- NumericUpDown                                                                   -->
-	<!-- =============================================================================== -->
+    <!-- =============================================================================== -->
+    <!-- NumericUpDown                                                                   -->
+    <!-- =============================================================================== -->
 
-	<DataTemplate x:Key="DefaultWatermarkTemplate">
-		<ContentControl Content="{Binding}" Foreground="Gray" Focusable="False" />
-	</DataTemplate>
+    <DataTemplate x:Key="DefaultWatermarkTemplate">
+        <ContentControl Content="{Binding}" Foreground="Gray" Focusable="False" />
+    </DataTemplate>
 
-	<Style x:Key="NumericUpDown" TargetType="Control">
-		<Setter Property="FontFamily" Value="{DynamicResource DefaultFont}"/>
-		<Setter Property="FontSize" Value="{DynamicResource NormalFontSize}"/>
-		<Setter Property="Foreground" Value="Black" />
-		<Setter Property="Background" Value="White" />
-		<Setter Property="IsTabStop" Value="False" />
-		<Setter Property="AllowDrop" Value="True"/>
-		<Setter Property="HorizontalContentAlignment" Value="Right" />
-		<Setter Property="VerticalContentAlignment" Value="Center" />
-		<Setter Property="Validation.ErrorTemplate" Value="{DynamicResource DefaultErrorTemplate}"/>
-		<Setter Property="Template">
-			<Setter.Value>
-				<ControlTemplate TargetType="Control">
-					<local:ButtonSpinner x:Name="Spinner" 
+    <Style x:Key="NumericUpDown" TargetType="{x:Type prim:InputBase}">
+        <Setter Property="FontFamily" Value="{DynamicResource DefaultFont}"/>
+        <Setter Property="FontSize" Value="{DynamicResource NormalFontSize}"/>
+        <Setter Property="Foreground" Value="Black" />
+        <Setter Property="Background" Value="White" />
+        <Setter Property="IsTabStop" Value="False" />
+        <Setter Property="AllowDrop" Value="True"/>
+        <Setter Property="TextAlignment" Value="Right" />
+        <Setter Property="Height" Value="24" />
+        <Setter Property="HorizontalContentAlignment" Value="Right" />
+        <Setter Property="VerticalContentAlignment" Value="Center" />
+        <Setter Property="Validation.ErrorTemplate" Value="{DynamicResource DefaultErrorTemplate}"/>
+        <Setter Property="WatermarkTemplate" Value="{StaticResource DefaultWatermarkTemplate}" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="Control">
+                    <local:ButtonSpinner x:Name="PART_Spinner" 
                                          IsTabStop="False"
                                          Height="{TemplateBinding Height}"
                                          BorderThickness="{TemplateBinding BorderThickness}"
                                          AllowSpin="{Binding AllowSpin, RelativeSource={RelativeSource TemplatedParent}}"
-                                         ShowButtonSpinner="{Binding ShowButtonSpinner, RelativeSource={RelativeSource TemplatedParent}}">
-						<local:WatermarkTextBox x:Name="TextBox"
+                                         ShowButtonSpinner="{Binding ShowButtonSpinner, RelativeSource={RelativeSource TemplatedParent}}"
+                                         ButtonSpinnerLocation="{Binding ButtonSpinnerLocation, RelativeSource={RelativeSource TemplatedParent}}">
+                        <local:WatermarkTextBox x:Name="PART_TextBox"
                                           BorderThickness="1,1,0,1"
+                                          IsTabStop="{TemplateBinding IsTabStop}"
                                           Background="{TemplateBinding Background}"
                                           ContextMenu="{TemplateBinding ContextMenu}"
                                           FontFamily="{TemplateBinding FontFamily}" 
@@ -104,6 +111,8 @@
                                           VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}"
                                           IsReadOnly="{Binding IsReadOnly, RelativeSource={RelativeSource TemplatedParent}}"
                                           SelectAllOnGotFocus="{Binding SelectAllOnGotFocus, RelativeSource={RelativeSource TemplatedParent}}"
+                                          AutoSelectBehavior="{Binding AutoSelectBehavior, RelativeSource={RelativeSource TemplatedParent}}"
+                                          AutoMoveFocus="{Binding AutoMoveFocus, RelativeSource={RelativeSource TemplatedParent}}"
                                           TextAlignment="{Binding TextAlignment, RelativeSource={RelativeSource TemplatedParent}}"
                                           AcceptsReturn="False"
                                           TextWrapping="NoWrap" 
@@ -116,45 +125,92 @@
                                           WatermarkTemplate="{Binding WatermarkTemplate, RelativeSource={RelativeSource TemplatedParent}}"
                                           AllowDrop="{TemplateBinding AllowDrop}"
 										  AutomationProperties.AutomationId="{Binding (AutomationProperties.AutomationId), StringFormat='TextBox_{0}', RelativeSource={RelativeSource TemplatedParent}}"/>
-					</local:ButtonSpinner>
-					<ControlTemplate.Triggers>
-						<Trigger Property="IsEnabled" Value="False">
-							<Setter Property="Foreground" Value="{DynamicResource DisabledForegroundBrush}" />
-							<Setter Property="Background" TargetName="TextBox" Value="{DynamicResource DisabledBackgroundBrush}" />
-						</Trigger>
-					</ControlTemplate.Triggers>
-				</ControlTemplate>
-			</Setter.Value>
-		</Setter>
-	</Style>
+                    </local:ButtonSpinner>
+                    <ControlTemplate.Triggers>
+                        <MultiDataTrigger>
+                            <MultiDataTrigger.Conditions>
+                                <Condition Binding="{Binding IsReadOnly, RelativeSource={RelativeSource Self}}" Value="False" />
+                                <Condition Binding="{Binding AllowTextInput, RelativeSource={RelativeSource Self}}" Value="False" />
+                            </MultiDataTrigger.Conditions>
+                            <Setter Property="IsReadOnly" Value="True" TargetName="PART_TextBox" />
+                        </MultiDataTrigger>
+                        <DataTrigger Binding="{Binding IsReadOnly, RelativeSource={RelativeSource Self}}" Value="True">
+                            <Setter Property="IsReadOnly" Value="True" TargetName="PART_TextBox" />
+                        </DataTrigger>
+                        <Trigger Property="IsFocused" Value="True">
+                            <Setter TargetName="PART_TextBox" Property="FocusManager.FocusedElement" Value="{Binding ElementName=PART_TextBox}" />
+                        </Trigger>
+                        <Trigger Property="IsEnabled" Value="False">
+                            <Setter Property="Foreground" Value="{DynamicResource DisabledForegroundBrush}" />
+                            <Setter Property="Background" TargetName="PART_TextBox" Value="{DynamicResource DisabledBackgroundBrush}" />
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
 
-	<!-- =============================================================================== -->
-	<!-- DecimalUpDown                                                                   -->
-	<!-- =============================================================================== -->
+    <!-- =============================================================================== -->
+    <!-- DecimalUpDown                                                                   -->
+    <!-- =============================================================================== -->
+    <Style TargetType="{x:Type local:DecimalUpDown}" BasedOn="{StaticResource NumericUpDown}" />
 
-	<Style TargetType="{x:Type local:DecimalUpDown}" BasedOn="{StaticResource NumericUpDown}">
-        <Setter Property="TextAlignment" Value="Right" />
-        <Setter Property="WatermarkTemplate" Value="{StaticResource DefaultWatermarkTemplate}" />
-        <Setter Property="Height" Value="24" />
-	</Style>
+    <!-- =============================================================================== -->
+    <!-- DoubleUpDown                                                                    -->
+    <!-- =============================================================================== -->
+    <Style TargetType="{x:Type local:DoubleUpDown}" BasedOn="{StaticResource NumericUpDown}" />
 
-	<!-- =============================================================================== -->
-	<!-- DoubleUpDown                                                                    -->
-	<!-- =============================================================================== -->
+    <!-- =============================================================================== -->
+    <!-- IntegerUpDown                                                                   -->
+    <!-- =============================================================================== -->
+    <Style TargetType="{x:Type local:IntegerUpDown}" BasedOn="{StaticResource NumericUpDown}" />
 
-	<Style TargetType="{x:Type local:DoubleUpDown}" BasedOn="{StaticResource NumericUpDown}">
-        <Setter Property="TextAlignment" Value="Right" />
-        <Setter Property="WatermarkTemplate" Value="{StaticResource DefaultWatermarkTemplate}" />
-        <Setter Property="Height" Value="24" />
-	</Style>
+    <!-- =============================================================================== -->
+    <!-- ShortUpDown                                                                     -->
+    <!-- =============================================================================== -->
+    <Style TargetType="{x:Type local:ShortUpDown}" BasedOn="{StaticResource NumericUpDown}" />
 
-	<!-- =============================================================================== -->
-	<!-- IntegerUpDown                                                                   -->
-	<!-- =============================================================================== -->
+    <!-- =============================================================================== -->
+    <!-- LongUpDown                                                                      -->
+    <!-- =============================================================================== -->
+    <Style TargetType="{x:Type local:LongUpDown}" BasedOn="{StaticResource NumericUpDown}" />
 
-	<Style TargetType="{x:Type local:IntegerUpDown}" BasedOn="{StaticResource NumericUpDown}">
-        <Setter Property="TextAlignment" Value="Right" />
-        <Setter Property="WatermarkTemplate" Value="{StaticResource DefaultWatermarkTemplate}" />
-        <Setter Property="Height" Value="24" />
-	</Style>
+    <!-- =============================================================================== -->
+    <!-- ByteUpDown                                                                      -->
+    <!-- =============================================================================== -->
+    <Style TargetType="{x:Type local:ByteUpDown}" BasedOn="{StaticResource NumericUpDown}" />
+
+    <!-- =============================================================================== -->
+    <!-- SingleUpDown                                                                    -->
+    <!-- =============================================================================== -->
+    <Style TargetType="{x:Type local:SingleUpDown}" BasedOn="{StaticResource NumericUpDown}" />
+
+    <!-- ===============================================================================   -->
+    <!-- Style for all internal derived types of NumericUpDown will be done in code-behind -->
+    <!-- for external themes to redefine the default style. The reason is that the         -->
+    <!-- toolkit.dll uses the InternalsVisibleTo attribute which makes internal data only  -->
+    <!-- available in code-behind(not xaml).                                               -->
+    <!-- (ex. Office2007 theme)                                                            -->
+    <!-- ===============================================================================   -->
+
+    <!-- =============================================================================== -->
+    <!-- SByteUpDown                                                                     -->
+    <!-- =============================================================================== -->
+    <!--<Style TargetType="{x:Type local:SByteUpDown}" BasedOn="{StaticResource NumericUpDown}" />-->
+
+    <!-- =============================================================================== -->
+    <!-- UIntegerUpDown                                                                  -->
+    <!-- =============================================================================== -->
+    <!--<Style TargetType="{x:Type local:UIntegerUpDown}" BasedOn="{StaticResource NumericUpDown}" />-->
+
+    <!-- =============================================================================== -->
+    <!-- ULongUpDown                                                                     -->
+    <!-- =============================================================================== -->
+    <!--<Style TargetType="{x:Type local:ULongUpDown}" BasedOn="{StaticResource NumericUpDown}" />-->
+
+    <!-- =============================================================================== -->
+    <!-- UShortUpDown                                                                    -->
+    <!-- =============================================================================== -->
+    <!--<Style TargetType="{x:Type local:UShortUpDown}" BasedOn="{StaticResource NumericUpDown}" />-->
+
 </ResourceDictionary>
