--- a/Resources/Resources/Styles/WPFToolkit/WatermarkTextBox.xaml
+++ b/Resources/Resources/Styles/WPFToolkit/WatermarkTextBox.xaml
@@ -19,7 +19,7 @@
 
 <ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:local="clr-namespace:Xceed.Wpf.Toolkit;assembly=WPFToolkit.Extended">
+                    xmlns:local="clr-namespace:Xceed.Wpf.Toolkit;assembly=Xceed.Wpf.Toolkit">
 
 	<DataTemplate x:Key="DefaultWatermarkTemplate">
 		<ContentControl Content="{Binding}" 
