--- a/TradeHubGui/Views/DataDownloaderView.xaml
+++ b/TradeHubGui/Views/DataDownloaderView.xaml
@@ -1,7 +1,7 @@
 ﻿<UserControl x:Class="TradeHubGui.Views.DataDownloaderView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:wpfToolkitExtended="clr-namespace:Xceed.Wpf.Toolkit;assembly=WPFToolkit.Extended"
+             xmlns:wpfToolkitExtended="clr-namespace:Xceed.Wpf.Toolkit;assembly=Xceed.Wpf.Toolkit"
              xmlns:conv="clr-namespace:TradeHubGui.Converters"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
